--- a/src/app/pages/layout/layout.html
+++ b/src/app/pages/layout/layout.html
@@ -33,4 +33,11 @@
     </div>
   </div>
 </nav>
-<router-outlet></router-outlet>
+<main>
+  
+    <div class="container-fluid">
+      <router-outlet></router-outlet>
+    </div>
+  
+</main>
+
